linux: vertical tabs width fix

--- a/userChrome.css
+++ b/userChrome.css
@@ -14,7 +14,6 @@
 #nav-bar:is(:hover, :focus-within, :has(*[open]), :has(*[dragstart]), [customizing]) {
   box-shadow: 0 1px var(--chrome-content-separator-color), 0 2px 14px rgba(0, 0, 0, 0.13);
   background: inherit;
-  background: linear-gradient(135deg, var(--toolbar-bgcolor) 35%, #0011f580 65%, var(--toolbar-bgcolor));
   background-color: var(--toolbar-bgcolor) !important;
   opacity: 1 !important;
   top: auto !important}
@@ -31,7 +30,7 @@ toolbar .toolbaritem-combined-buttons {padding: 0 !important; margin: 0 !importa
 
 
 /*   Sidebar   */
-#sidebar-main{
+#sidebar-main {
   display: block;
   position: fixed;
   height: 100%;
@@ -43,7 +42,11 @@ toolbar .toolbaritem-combined-buttons {padding: 0 !important; margin: 0 !importa
   opacity: 0;
   --tab-block-margin: 0}
 
-#sidebar-main:hover, #sidebar-main:has(#tabContextMenu[hasbeenopened]), #tabContextMenu[hasbeenopened] #sidebar-main{
+#vertical-tabs {width: 400px}
+
+#sidebar-main:hover,
+#sidebar-main:has(#tabContextMenu[hasbeenopened]),
+#tabContextMenu[hasbeenopened] #sidebar-main{
   left: 0;
   opacity: 1}
 
@@ -112,16 +115,6 @@ moz-button.more-tools-button
 .tabbrowser-tab[pending] :is(.tab-icon-image, .tab-label) {opacity: .6 !important}
 
 #vertical-tabs-newtab-button:hover {background-color: var(--button-background-color-hover) !important}
-  
-@media(-moz-platform: linux) {
-  .wrapper {@media -moz-pref("sidebar.verticalTabs") {:host([expanded]) & {width: 400px}}}
-  
-  #tabbrowser-arrowscrollbox {&[orient="vertical"] {&::part(overflow-start-indicator), &::part(overflow-end-indicator) {
-    height: 10px;
-    margin-block: -6px -10px}}}
-  
-  .actions-list {flex-direction: inherit !important}
-}
 
 
 
@@ -140,7 +133,7 @@ moz-button.more-tools-button
   border-radius: 0 !important;
   background-color: transparent !important}
 
-#PlacesToolbarItems toolbarbutton.bookmark-item:is(:hover, [open]) > :is(image, label) {background-color: color-mix(in srgb, currentColor 8%, transparent)}
+#PlacesToolbarItems toolbarbutton.bookmark-item:is(:hover, [open]) > :is(image, label) {background-color: var(--toolbarbutton-hover-background)}
 
 #PlacesToolbarItems toolbarbutton.bookmark-item > label {
   padding: 5px !important;
@@ -153,7 +146,7 @@ moz-button.more-tools-button
   width: 32px !important;
   height: 32px !important}
 
-@media (prefers-color-scheme: dark) {toolbarbutton.bookmark-item > image[src^="page-icon:https://github.com/"] {filter: invert(0.9)}}
+@media (prefers-color-scheme: dark) {toolbarbutton.bookmark-item > image[src^="page-icon:https://github.com/"] {filter: invert(1)}}
 
 #PlacesToolbarItems toolbarbutton.bookmark-item[dragover] > label {color: SelectedItem}
 
@@ -312,42 +305,34 @@ tree {background-color: transparent !important}
 
 /*   Colors   */
 * {
+  --autocomplete-popup-hover-background:  #8892;
+  --button-background-color-ghost-active: #8892;
+  --button-background-color-ghost-hover:  #8892;
+  --button-background-color:              #8892;
+  --menuitem-hover-background-color:      #8892;
+  --panel-banner-item-background-color:   #8892;
+  --panel-item-active-bgcolor:            #8892;
+  --panel-item-hover-bgcolor:             #8892;
+  --urlbarView-hover-background:          #8892;
   
-  --button-background-color: color-mix(in srgb, currentColor 6%, transparent);
-      --urlbar-box-bgcolor: var(--button-background-color);
-      --urlbar-box-focus-bgcolor: var(--button-background-color);
-      --panel-banner-item-background-color: var(--button-background-color);
+  --urlbar-box-focus-bgcolor:             #8893;
   
+  --button-active-bgcolor:                #8894;
+  --button-background-color-hover:        #8894;
+  --menu-border-color:                    #8894;
+  --panel-banner-item-hover-bgcolor:      #8894;
+  --panel-separator-color:                #8894;
+  --toolbarbutton-active-background:      #8894;
+  --toolbarbutton-hover-background:       #8894;
+  --urlbar-box-active-bgcolor:            #8894;
+  --urlbar-box-hover-bgcolor:             #8894;
+  --urlbar-box-bgcolor:                   #8894;
+  --urlbarView-separator-color:           #8894;
   
-  --button-background-color-hover: color-mix(in srgb, currentColor 9%, transparent);
-      --button-active-bgcolor: var(--button-background-color-hover);
-      --urlbar-box-hover-bgcolor: var(--button-background-color-hover);
-      --urlbar-box-active-bgcolor: var(--button-background-color-hover);
-      --urlbarView-hover-background: var(--button-background-color-hover);
-      --panel-banner-item-hover-bgcolor: var(--button-background-color-hover);
-  
-  
-  --panel-item-hover-bgcolor: color-mix(in srgb, currentColor 6%, transparent);
-      --panel-item-active-bgcolor: var(--panel-item-hover-bgcolor);
-      --autocomplete-popup-hover-background: var(--panel-item-hover-bgcolor);
-      --menuitem-hover-background-color: var(--panel-item-hover-bgcolor);
-      --button-background-color-ghost-hover: var(--panel-item-hover-bgcolor);
-      --button-background-color-ghost-active: var(--panel-item-hover-bgcolor);
-  
-  
-  --toolbarbutton-hover-background: color-mix(in srgb, currentColor 9%, transparent);
-      --toolbarbutton-active-background: var(--toolbarbutton-hover-background);
-  
-  
-  --panel-separator-color: color-mix(in srgb, currentColor 9%, transparent);
-      --menu-border-color: var(--panel-separator-color);
-      --urlbarView-separator-color: var(--panel-separator-color);
-  
-  caret-color:                      red;
-  --input-bgcolor:                  transparent;
-  --background-color-box:           transparent;
-  --link-color:                     hsl(334,98%,50%);
-  
+  caret-color:                            red;
+  --input-bgcolor:                        transparent;
+  --background-color-box:                 transparent;
+  --link-color:                           hsl(334,98%,50%);
 }
 
 
@@ -355,6 +340,10 @@ tree {background-color: transparent !important}
 .tab-background[selected] {
   background: radial-gradient(circle at center, hsla(202,100%,30%,.5), transparent, hsla(202,100%,30%,.5), transparent) !important;
   --tab-selected-outline-color: #fff1 !important}
+
+/*   Navbar   */
+#nav-bar:is(:hover, :focus-within, :has(*[open]), :has(*[dragstart]), [customizing]) {
+  background: linear-gradient(135deg, var(--toolbar-bgcolor) 35%, #0011f580 65%, var(--toolbar-bgcolor))}
 
 /*   Selection   */
 ::selection {background-color: hsl(334,98%,50%) !important}
@@ -373,15 +362,17 @@ menuitem:is([data-l10n-id="text-action-copy"], #context-copylink, #context-copy,
 
 @media (prefers-color-scheme: dark) {
   * {
-    --toolbar-color:                  hsl(252, 4%, 95%);
-    --toolbar-bgcolor:                hsl(252, 4%, 0%);
-    --arrowpanel-background:          hsl(252, 4%, 7%); --arrowpanel-dimmed: var(--arrowpanel-background); --toolbar-field-focus-background-color: var(--arrowpanel-background); --info-bar-background-color: var(--arrowpanel-background) !important;
-    --in-content-page-background:     hsl(252, 4%, 7%);
-    --background-color-canvas:        hsl(252, 4%, 7%) !important;
-    --arrowpanel-border-color:        black;
-    --chrome-content-separator-color: black;
-    --sidebar-border-color:           black;
-    --tab-selected-outline-color:     #fff2;
-    --urlbarView-highlight-color:     #fff;
+    --toolbar-bgcolor:                      black;
+    --arrowpanel-background:                #121113; 
+    --arrowpanel-dimmed:                    #121113; 
+    --toolbar-field-focus-background-color: #121113; 
+    --info-bar-background-color:            #121113 !important;
+    --in-content-page-background:           #121113;
+    --background-color-canvas:              #121113 !important;
+    --arrowpanel-border-color:              black;
+    --chrome-content-separator-color:       black;
+    --sidebar-border-color:                 black;
+    --tab-selected-outline-color:           #fff2;
+    --urlbarView-highlight-color:           #fff;
     }
 }
