--- a/YouTube.css
+++ b/YouTube.css
@@ -20,20 +20,13 @@ ytd-guide-collapsible-section-entry-renderer.ytd-guide-section-renderer:not(:fir
 
 /* Color scheme */
 html[dark], [dark] {
-
-  --yt-spec-10-percent-layer:               rgba(255, 255, 255, 0.07);
-  --yt-spec-15-percent-layer:               rgba(255, 255, 255, 0.09);
-  --yt-spec-text-primary:                   rgba(255, 255, 255, 0.87);
-  --yt-spec-icon-inactive:                  #ddd;
-  --yt-spec-icon-active:                    #fff;
-  !--yt-spec-base-background:                #0008;/*фон шапки*/
-  !--yt-spec-raised-background:              #1110;
+  --yt-spec-additive-background: rgba(255,255,255,0.06);
+  --yt-spec-raised-background: rgba(255,255,255,0.06);
+  --yt-spec-menu-background: #1c1c1c;
 }
-/*
-html[dark] .header.ytd-playlist-panel-renderer,
-html[dark] #header.ytd-engagement-panel-title-header-renderer
-    {background-color: var(--yt-spec-badge-chip-background)}
-*/
+
+.ytVideoMetadataCarouselViewModelHost {background-color: var(--yt-spec-additive-background)}
+
 
 /* Watching indicator */
 #progress.ytd-thumbnail-overlay-resume-playback-renderer {background-color: #f00d}
@@ -95,7 +88,7 @@ toggleable-list-item-view-model.toggleableListItemViewModelHost > yt-list-item-v
 
 toggleable-list-item-view-model.toggleableListItemViewModelHost > yt-list-item-view-model[aria-pressed="true"] > div > div > span > span > div > svg {color: #ff0033}
 
-.ytContextualSheetLayoutHost {background-color: #141414}
+.ytContextualSheetLayoutHost {background-color: var(--yt-spec-menu-background)}
 
 
 
@@ -149,7 +142,9 @@ ytd-item-section-renderer.style-scope > div > ytd-video-renderer > div > div > d
 /* Player */
 ytd-watch-flexy.style-scope[theater]:not([fullscreen]) #full-bleed-container {margin-top: -56px}
 
-#full-bleed-container {max-height: 100% !important}
+ytd-watch-flexy[full-bleed-player][respect-aspect-ratio]:not([fullscreen]) #full-bleed-container {max-height: 100vh !important}
+ytd-watch-flexy[full-bleed-player][respect-aspect-ratio]:not([fullscreen]) #full-bleed-container.ytd-watch-flexy {height: 100vh !important}
+
 
 ytd-topbar-logo-renderer,
 .ytp-fullscreen-button,
